--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    alt="A roar from the King of the jungle"
+    title="Visit our Nationl Park"
+    />
   </body>
 </html>
